--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "serve": "^11.3.2",
     "svelte": "^3.37.0",
     "svelte-preprocess": "^4.7.0"
+  },
+  "dependencies": {
+    "d3-fetch": "^3.0.1",
+    "just-debounce-it": "^2.0.0"
   }
 }
