--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "svelte-preprocess": "^4.7.0"
   },
   "dependencies": {
+    "awesomplete": "^1.1.5",
     "d3-fetch": "^3.0.1",
     "just-debounce-it": "^2.0.0"
   }
